--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,56 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
         android:layout_marginBottom="24dp"
-        android:text="Đăng nhập" />
+        android:text="Đăng nhập"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
     <LinearLayout
-        android:orientation="vertical"
-        android:padding="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="24dp">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Tên đăng nhập"/>
+            android:text="Tên đăng nhập"
+            android:textSize="16dp" />
+
         <EditText
             android:id="@+id/edt_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_edt"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/bg_edt"
             android:hint="Nhập tên đăng nhập"
-            android:padding="10dp"/>
+            android:padding="10dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:textSize="16dp"
-            android:text="Mật khẩu"/>
+            android:text="Mật khẩu"
+            android:textSize="16dp" />
+
         <EditText
             android:id="@+id/edt_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_edt"
             android:drawableEnd="@drawable/ic_eye_open"
-            android:inputType="textPassword"
             android:hint="Nhập mật khẩu"
-            android:padding="10dp"/>
+            android:inputType="textPassword"
+            android:padding="10dp" />
 
         <CheckBox
             android:id="@+id/cb_save"
@@ -60,36 +65,39 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Lưu tài khoản"
-            android:textSize="16dp"/>
+            android:textSize="16dp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Đăng nhập"
-            android:textSize="18dp"
-            android:textColor="@color/white"
             android:layout_marginTop="24dp"
             android:background="@drawable/bg_btn"
-            android:textAllCaps="false"/>
+            android:text="Đăng nhập"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="16dp"
+            android:gravity="center">
+
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bạn chưa có tài khoản? " />
+
             <TextView
                 android:id="@+id/tv_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="16dp"
+                android:text="Đăng kí"
                 android:textColor="#FF5722"
-                android:text="Đăng kí" />
+                android:textSize="16dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
