--- a/app/src/main/res/layout/layout_add_dialog.xml
+++ b/app/src/main/res/layout/layout_add_dialog.xml
@@ -5,8 +5,6 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -98,8 +96,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintStart_toStartOf="@+id/edt_content"
-        app:layout_constraintTop_toBottomOf="@+id/edt_content"
-        android:background="@drawable/ic_add" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_content" />
 
     <LinearLayout
         android:id="@+id/linearLayout4"
